64 - Rename SemanticAssetDetail removing Dto suffix
